2002-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-product-variable-file-list): Add a check for
	the value of `gnus-use-correct-string-widths' in the forms.

	* lisp/gnus-start.el (gnus-product-quick-file-format): Include the
	value of `gnus-use-correct-string-widths' in the file form.
	(gnus-product-read-variable-file-1): Check for the equality in the
	value of `gnus-use-correct-string-widths' as well.

2002-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 11 in
	order to force update cached format specs.

	* lisp/gnus-spec.el (gnus-spec-tab): Deal with wide characters.

2002-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-strip-forbidden-properties): Don't
	strip properties when the invisible MIME part is inserted.

	* lisp/gnus-xmas.el (gnus-xmas-group-startup-message): Position
	point to the top.

2002-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/canlock.el (canlock-string-as-unibyte): New macro.
	(canlock-sha1-with-openssl): Return a unibyte string.
	(canlock-make-cancel-key): Treat Message-ID as a unibyte string.

2002-01-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnheader.el (std11-fold-region): New function copied from
	`rfc2047-fold-region'.
	(std11-fold-field): Use it.

2002-01-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus.el: Don't autoload "gnus-bitmap".

	* lisp/gnus-sum.el (gnus-summary-toggle-smiley): Replace
	`gnus-smiley-display' with `gnus-article-smiley-display'.

	* lisp/gnus-art.el (gnus-article-smiley-display): Re-implement to
	integrate smiley functions for various Emacsen.
	(gnus-treatment-function-alist): Always use
	`gnus-article-smiley-display' for `gnus-treat-display-smileys'.
	(gnus-treat-display-smileys): Use `gnus-image-type-available-p'.
	(gnus-article-smiley-mule-loaded-p): New internal variable.
	(gnus-article-should-use-smiley-mule): New user option.

2002-01-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
